[gd_scene load_steps=24 format=3 uid="uid://c8kosebxby1ve"]

[ext_resource type="Script" path="res://prefabs/projectiles/projectile.gd" id="1_o6vic"]
[ext_resource type="Script" path="res://scripts/entities/stats/stat_block.gd" id="2_68i85"]
[ext_resource type="Texture2D" uid="uid://blj683acjnbdy" path="res://assets/art/fx/32_circle_fx.png" id="2_eiqey"]
[ext_resource type="Texture2D" uid="uid://bll4trxhsfd27" path="res://assets/art/equipment/missile.png" id="2_i2vog"]
[ext_resource type="Script" path="res://scripts/entities/stats/stat.gd" id="3_xm6do"]
[ext_resource type="Script" path="res://scripts/entities/hit_detector.gd" id="6_3qjny"]
[ext_resource type="Script" path="res://scripts/entities/hit_dealers/hit_once.gd" id="7_mauvn"]
[ext_resource type="Script" path="res://scripts/entities/team.gd" id="8_st4bd"]
[ext_resource type="Script" path="res://scripts/projectiles/forward_projectile.gd" id="9_bnax3"]
[ext_resource type="Script" path="res://scripts/entities/death.gd" id="10_mwxcx"]
[ext_resource type="Script" path="res://scripts/projectiles/homing_projectile.gd" id="10_tawvl"]
[ext_resource type="Script" path="res://scripts/entities/fx.gd" id="11_mu2gq"]
[ext_resource type="Script" path="res://scripts/entities/entity_tracker.gd" id="11_umylg"]
[ext_resource type="Texture2D" uid="uid://c1hecckiex8v8" path="res://assets/art/fx/64_circle_fx.png" id="12_wpohu"]
[ext_resource type="Script" path="res://scripts/entities/advanced_gpu_particles_2d.gd" id="13_fmf2r"]

[sub_resource type="Curve" id="Curve_kpo58"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.06154, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fccvu"]
curve = SubResource("Curve_kpo58")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_feycs"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.4
spread = 180.0
gravity = Vector3(0, 0, 0)
damping_min = 150.0
damping_max = 150.0
scale_curve = SubResource("CurveTexture_fccvu")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dtamw"]
radius = 16.0
height = 64.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ecw82"]
radius = 512.0

[sub_resource type="Curve" id="Curve_qrlkw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -3.06154, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tq5dr"]
curve = SubResource("Curve_qrlkw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yo0u0"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.4
spread = 180.0
initial_velocity_min = 150.0
initial_velocity_max = 200.0
gravity = Vector3(0, 0, 0)
damping_min = 150.0
damping_max = 150.0
scale_min = 0.75
scale_max = 0.75
scale_curve = SubResource("CurveTexture_tq5dr")

[node name="Missile" type="Node2D"]
z_index = 5
script = ExtResource("1_o6vic")

[node name="StatBlock" type="Node" parent="."]
script = ExtResource("2_68i85")

[node name="Speed" type="Node" parent="StatBlock"]
script = ExtResource("3_xm6do")
base_amount = 100

[node name="Damage" type="Node" parent="StatBlock"]
script = ExtResource("3_xm6do")
type = 5
base_amount = 20

[node name="Trail" type="GPUParticles2D" parent="."]
self_modulate = Color(0.615686, 0.658824, 0.698039, 1)
position = Vector2(0, 20)
emitting = false
process_material = SubResource("ParticleProcessMaterial_feycs")
texture = ExtResource("2_eiqey")
lifetime = 0.5

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_i2vog")

[node name="HitBox" type="Area2D" parent="." node_paths=PackedStringArray("entity", "team")]
script = ExtResource("6_3qjny")
enabled = false
entity = NodePath("..")
mode = 2
type = 1
team = NodePath("../Team")
track_wall = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CapsuleShape2D_dtamw")

[node name="HitOnce" type="Node" parent="HitBox" node_paths=PackedStringArray("hitbox", "amount_stat")]
script = ExtResource("7_mauvn")
hitbox = NodePath("..")
amount_stat = NodePath("../../StatBlock/Damage")

[node name="Team" type="Node" parent="."]
script = ExtResource("8_st4bd")

[node name="ForwardProjectile" type="Node" parent="." node_paths=PackedStringArray("speed_stat")]
script = ExtResource("9_bnax3")
enabled = false
speed_stat = NodePath("../StatBlock/Speed")

[node name="HomingProjectile" type="Node2D" parent="." node_paths=PackedStringArray("speed_stat", "entity_tracker")]
script = ExtResource("10_tawvl")
enabled = false
speed_stat = NodePath("../StatBlock/Speed")
entity_tracker = NodePath("EntityTracker")
rotation_speed_factor = 30.0
rotate_projectile = true

[node name="EntityTracker" type="Area2D" parent="HomingProjectile" node_paths=PackedStringArray("team")]
script = ExtResource("11_umylg")
enabled = false
mode = 2
team = NodePath("../../Team")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HomingProjectile/EntityTracker"]
shape = SubResource("CircleShape2D_ecw82")
debug_color = Color(0.788235, 0.658824, 0.152941, 0.0352941)

[node name="Death" type="Node2D" parent="."]
script = ExtResource("10_mwxcx")
enabled = false
use_lifetime = true
lifetime = 10.0

[node name="FX" type="Node2D" parent="Death"]
z_index = 10
script = ExtResource("11_mu2gq")
unparent_on_play = true
use_lifetime = true
lifetime = 1.0

[node name="Particles" type="GPUParticles2D" parent="Death/FX"]
self_modulate = Color(0.792157, 0.215686, 0.196078, 1)
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_yo0u0")
texture = ExtResource("12_wpohu")
lifetime = 0.4
one_shot = true
explosiveness = 0.8
script = ExtResource("13_fmf2r")

[connection signal="constructed" from="." to="Trail" method="set_emitting" binds= [true]]
[connection signal="constructed" from="." to="HitBox" method="set_enabled" binds= [true]]
[connection signal="constructed" from="." to="ForwardProjectile" method="set_enabled" binds= [true]]
[connection signal="constructed" from="." to="Death" method="set_enabled" binds= [true]]
[connection signal="constructed" from="." to="HomingProjectile" method="set_enabled" binds= [true]]
[connection signal="constructed" from="." to="HomingProjectile/EntityTracker" method="set_enabled" binds= [true]]
[connection signal="wall_entered" from="HitBox" to="Death" method="die" unbinds=1]
[connection signal="hit_dealt" from="HitBox/HitOnce" to="Death" method="die" unbinds=1]
